Update home page

--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -165,7 +165,8 @@
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">Python</div>
-              <div class="skills__skill">MySQL/PostgreSQL</div>    
+              <div class="skills__skill">PostgreSQL</div>  
+              <div class="skills__skill">Java</div>  
               <div class="skills__skill">C</div>         
               <div class="skills__skill">C++</div>
               <div class="skills__skill">React</div>
@@ -214,7 +215,28 @@
               >
             </div>
           </div>
-          
+          <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/fitness.jpg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+                style="box-shadow: 10px 10px 5px #ccc;"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Fitness Club</h3>
+              <p class="projects__row-content-desc">
+                A fitness web application designed to help users with their work out
+              </p>
+              <a
+                href="https://github.com/Peaceful36/My-Fitness-Club"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >See Details</a
+              >
+            </div>
+
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
