--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hoa's Portfolio</title>
-    <meta name="description" content="Shiva's Portfolio" />
+    <meta name="description" content="Hoa's Portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -165,8 +165,7 @@
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">Python</div>
-              <div class="skills__skill">PostgreSQL</div>  
-              <div class="skills__skill">Java</div>  
+              <div class="skills__skill">MySQL/PostgreSQL</div>    
               <div class="skills__skill">C</div>         
               <div class="skills__skill">C++</div>
               <div class="skills__skill">React</div>
@@ -215,9 +214,11 @@
               >
             </div>
           </div>
-          <div class="projects__row-img-cont">
+
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/fitness.jpg"
+                src="./assets/png/fitness.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -225,9 +226,9 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Fitness Club</h3>
+              <h3 class="projects__row-content-title">My Fitness Club</h3>
               <p class="projects__row-content-desc">
-                A fitness web application designed to help users with their work out
+                A web application that helps users improve their gym activities.
               </p>
               <a
                 href="https://github.com/Peaceful36/My-Fitness-Club"
@@ -236,7 +237,8 @@
                 >See Details</a
               >
             </div>
-
+          </div>
+          
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -274,7 +276,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="/assets/png/sorting.png"
+                src="./assets/png/infosec.png"
                 style="max-height: fit-content; max-width: fit-content; margin: auto;"
                 alt="Software Screenshot"
                 class="projects__row-img"
@@ -282,9 +284,9 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Introduction to Computer Programming</h3>
+              <h3 class="projects__row-content-title">Information Security</h3>
               <p class="projects__row-content-desc">
-                Structure of computers; the computing environment. Programming in a language such as Python. Program structure: elementary data types, statements, control flow, functions, classes, objects, methods, fields. List: searching, sorting and complexity.
+                An investigation of many aspects of modern information security. Utilizing modern operating systems security features to deploy software in a protected environment. Common threats to networks and networked computers and tools to deal with them. Cryptography and the role it plays in software development, systems security and network security.
               </p>
               
             </div>
