--- a/portfolio-main/projects/huffman.html
+++ b/portfolio-main/projects/huffman.html
@@ -23,7 +23,7 @@
           <div class="header__logo-img-cont">
             <img
               src="../assets/jpeg/pfp.jpeg"
-              alt="Hoa Logo Image"
+              alt="Shiva Mulwani Logo Image"
               class="header__logo-img"
             />
           </div>
